--- a/org-src/index.org
+++ b/org-src/index.org
@@ -20,9 +20,9 @@ An interactive ClojureScript REPL in the browser, based on replumb
 and re-frame. Try it [[http://yetanalytics.github.io/re-pl/][here]].
 
 Or here:
-#+BEGIN_HTML
-<iframe src="http://yetanalytics.github.io/re-pl/"></iframe>
-#+END_HMTL
+
+#+HTML: <iframe src="http://yetanalytics.github.io/re-pl/"></iframe>
+
 
 *** [[https://github.io/xapisec/xapisec][xAPIsec]]
 A community-driven specification for xAPI security
